--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -14,10 +14,12 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^9.0.10",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "redis": "^5.8.2",
+    "resend": "^6.0.2",
     "zod": "^4.1.5"
   }
 }
