--- a/apps/engine/package.json
+++ b/apps/engine/package.json
@@ -12,6 +12,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "redis": "^5.8.2"
+    "redis": "^5.8.2",
+    "db": "workspace:*"
   }
 }
