--- a/apps/engine/package.json
+++ b/apps/engine/package.json
@@ -12,7 +12,8 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "redis": "^5.8.2",
-    "db": "workspace:*"
+    "@imex/db": "workspace:*",
+    "mongodb": "^6.19.0",
+    "redis": "^5.8.2"
   }
 }
