--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -9,20 +9,20 @@
     "@types/bun": "latest",
     "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.3"
+    "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "@types/jsonwebtoken": "^9.0.10",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "redis": "^5.8.2",
     "resend": "^6.0.2",
     "zod": "^4.1.5",
-    "@imex/db": "workspace:*"
+    "@imex/db": "workspace:*",
+    "@iMex/redis": "workspace:*"
   }
 }
