--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -3,7 +3,8 @@
   "module": "index.ts",
   "type": "module",
   "scripts": {
-    "dev": "bun run --hot src/index.ts"
+    "dev": "bun run --hot src/index.ts",
+    "start": "bun run src/index.ts"
   },
   "devDependencies": {
     "@types/bun": "latest",
@@ -16,13 +17,13 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@imex/redis": "workspace:*",
+    "@imex/db": "workspace:*",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "resend": "^6.0.2",
-    "zod": "^4.1.5",
-    "@imex/db": "workspace:*",
-    "@iMex/redis": "workspace:*"
+    "zod": "^4.1.5"
   }
 }
