--- a/apps/ws/package.json
+++ b/apps/ws/package.json
@@ -14,6 +14,6 @@
   "dependencies": {
     "@types/ws": "^8.18.1",
     "ws": "^8.18.3",
-    "@iMex/redis": "workspace:*"
+    "@imex/redis": "workspace:*"
   }
 }
