--- a/packages/redis/package.json
+++ b/packages/redis/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@iMex/redis",
+  "name": "@imex/redis",
   "module": "index.ts",
   "main": "./src/index.ts",
   "types": "./src/index.ts",
