--- a/apps/engine/package.json
+++ b/apps/engine/package.json
@@ -3,6 +3,7 @@
   "module": "index.ts",
   "type": "module",
   "scripts": {
+    "start": "bun run index.ts",
     "dev": "bun run --hot index.ts"
   },
   "devDependencies": {
