--- a/apps/poller/package.json
+++ b/apps/poller/package.json
@@ -3,6 +3,7 @@
   "module": "index.ts",
   "type": "module",
   "scripts": {
+    "start": "bun run src/index.ts",
     "dev": "bun run --hot src/index.ts"
   },
   "devDependencies": {
